<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.signIn.view.SignInFragment">

        <ImageView
            android:id="@+id/image_tailormade"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:src="@drawable/ic_tailormade_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tailormade"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:gravity="center_vertical"
            android:text="@string/tailormade_label"
            android:textAppearance="?attr/textAppearanceHeadline1"
            app:layout_constraintStart_toEndOf="@id/image_tailormade"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_info"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/linear_layout_sign_in_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/welcome_label"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/enter_email_password_label"
                android:textAppearance="?attr/textAppearanceBody2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/password_label"
                app:endIconDrawable="@drawable/ic_visibility_off"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sign_in"
                style="@style/Theme.TailorMade.Button.Rounded"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_40"
                android:enabled="false"
                android:text="@string/sign_in_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_go_to_sign_up"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_go_to_sign_up_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_label"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:id="@+id/text_go_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text="@string/sign_up_label"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>